unpackaged/main/default/objects/Request__c/fields/Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked__c</fullName>
    <inlineHelpText>totals all hours worked on Request Tasks where status = Completed</inlineHelpText>
    <label>Total Hours Worked (Request Tasks)</label>
    <summarizedField>Request_Task__c.Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>Request_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Request_Task__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>