unpackaged/main/default/objects/Request__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>(Actual_Completion__c -  Submitted__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours from time request was submitted to time it was completed.</inlineHelpText>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>