unpackaged/main/default/objects/Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting/Call/Discussion</fullName>
            </value>
            <value>
                <fullName>New Process</fullName>
            </value>
            <value>
                <fullName>Problem/Error</fullName>
            </value>
            <value>
                <fullName>Record Maintenance</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Update to Existing Process</fullName>
            </value>
            <value>
                <fullName>User Maintenance/Creation</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>