unpackaged/main/default/objects/Request__c/fields/User_Stories__c.field-meta.xml
<CustomField>
    <fullName>User_Stories__c</fullName>
    <label>User Stories/ Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>