unpackaged/main/default/objects/Request__c/fields/Zendesk_Link__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://mycase.zendesk.com/agent/tickets/&quot; &amp;  TEXT(Zendesk_Ticket__c) , &quot;https://mycase.zendesk.com/agent/tickets/&quot; &amp; TEXT(Zendesk_Ticket__c), &quot;_blank&quot;)</formula>
    <label>Zendesk Link</label>
    <type>Text</type>
</CustomField>