unpackaged/main/default/objects/Request__c/fields/Zendesk_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Ticket__c</fullName>
    <label>Zendesk Ticket #</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>