unpackaged/main/default/objects/Request__c/recordTypes/Bug_Error.recordType-meta.xml
<RecordType>
    <fullName>Bug_Error</fullName>
    <active>true</active>
    <description>Getting a weird error message? Something not working the way it&#39;s supposed to?</description>
    <label>Bug/Error</label>
</RecordType>