unpackaged/main/default/objects/Request__c/recordTypes/Enhancement.recordType-meta.xml
<RecordType>
    <fullName>Enhancement</fullName>
    <active>true</active>
    <description>Add new or update existing processes in Salesforce - create a new field, modify a workflow, build a new custom object, integrate with another system, etc.</description>
    <label>Enhancement/Project</label>
</RecordType>