unpackaged/main/default/objects/Request__c/recordTypes/Inquiry_Question.recordType-meta.xml
<RecordType>
    <fullName>Inquiry_Question</fullName>
    <active>true</active>
    <description>Have a Question? Or Want to enquire about some feature/functionality or explore options?</description>
    <label>Inquiry/Question</label>
</RecordType>