unpackaged/main/default/objects/Request__c/recordTypes/Production_Support.recordType-meta.xml
<RecordType>
    <fullName>Production_Support</fullName>
    <active>false</active>
    <description>Existing process is broken/record or user maintenance.</description>
    <label>Production Support</label>
</RecordType>