unpackaged/main/default/objects/Request__c/recordTypes/Record_Maintenance_Mass_Update.recordType-meta.xml
<RecordType>
    <fullName>Record_Maintenance_Mass_Update</fullName>
    <active>true</active>
    <description>Looking to transfer some records to another user, or update them with a new field value?</description>
    <label>Record Maintenance/Mass Update</label>
</RecordType>