unpackaged/main/default/objects/Request__c/recordTypes/Report_Dashboard.recordType-meta.xml
<RecordType>
    <fullName>Report_Dashboard</fullName>
    <active>true</active>
    <description>Need help with an existing report/dashboard? Want to request a brand spanking new one?</description>
    <label>Report/Dashboard</label>
</RecordType>