unpackaged/main/default/objects/Request__c/recordTypes/Tech_Debt_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Tech_Debt_Maintenance</fullName>
    <active>true</active>
    <label>Tech Debt/Maintenance</label>
</RecordType>