unpackaged/main/default/objects/Request__c/recordTypes/User_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>User_Maintenance</fullName>
    <active>true</active>
    <description>Want to change someone&#39;s permissions/role/profile, or request access for a new user?</description>
    <label>User Maintenance</label>
</RecordType>